# arucoReader

./: CMakeLists.txt  arucoInstall.sh  config.json  runAruco.cpp
cameraConfigs/: example.yaml
include/: aruco.h
src/: aruco.cpp
